--- a/skins/default/list-head.scss
+++ b/skins/default/list-head.scss
@@ -121,9 +121,8 @@ article.list > form > table > thead {
 					border: none !important;
 					box-shadow: inset 0 0 1px 1px #fbfaf9;
 					display: block;
-					height: 12px !important;
-					padding: 10px 5px !important;
-					width: calc(100% - 10px) !important;
+					padding: 10px 5px;
+					width: 100% !important;
 				}
 			}
 		}
